[package]
name = "latkerlo-jvotci"
version = "2.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tools for creating and decomposing Lojban lujvo."
repository = "https://github.com/latkerlo/latkerlo-jvotci"
keywords = ["lojban", "lujvo"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
indexmap = "2.8.0"
itertools = "0.14.0"
regex = "1.11.1"
