[package]
name = "latkerlo-jvotci"
version = "2.4.2510"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Tools for creating and decomposing Lojban lujvo."
repository = "https://github.com/latkerlo/latkerlo-jvotci"
keywords = ["lojban", "lujvo", "linguistics", "cli"]
categories = ["text-processing", "parser-implementations", "command-line-utilities"]

[[bin]]
name = "jvotci"
path = "src/main.rs"

[dependencies]
indexmap = "2.8.0"
itertools = "0.14.0"
regex = "1.11.1"
