[package]
name = "latkerlo-jvotci"
version = "1.1.2601"
edition = "2021"
license-file = "NOTICE.md"
description = "Tools for creating and decomposing lojban lujvo."
repository = "https://github.com/latkerlo/latkerlo-jvotci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
regex = "1.10.2"
